--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -3,6 +3,10 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>MEAN Stack</title>
+    <!-- Angular-->
+    <script src="/vendor/angular/angular.min.js" type="text/javascript"></script>
+    <!-- Client Side app code-->
+    <script src="/assets/scripts/app.min.js" type="text/javascript"></script>
 </head>
 <body>
 <div >
