--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -6,13 +6,15 @@
     <title>MEAN Stack</title>
     <!-- Bootstrap-->
     <link href="/vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- CSS -->
+    <link rel="stylesheet" href="/client/stylesheet.css">
+    <!-- Scripts-->
     <!-- jQuery-->
     <script src="/vendor/jquery/dist/jquery.min.js"></script>
-    <!-- Scripts-->
-    <!-- Angular-->
-    <script src="/vendor/angular/angular.min.js" type="text/javascript"></script>
     <!-- Bootstrap-->
     <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- Angular-->
+    <script src="/vendor/angular/angular.min.js" type="text/javascript"></script>
     <!-- Client Side app code-->
     <script src="/assets/scripts/app.min.js" type="text/javascript"></script>
 </head>
@@ -38,7 +40,7 @@
 <h4>Cats</h4>
 <ul class="list-unstyled">
     <!-- Angular repeat function for listing multiple listings-->
-    <li ng-repeat="cat in cats">{{ cat.name }}</li>
+    <li class="kitties" ng-repeat="cat in cats">{{ cat.name }}</li>
 </ul>
 </div>
 </div>
